log
Sat, Mar 29, 2025  4:47:51 PM: 
 list.c | 108 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 104 insertions(+), 4 deletions(-)
./test.sh: line 26: gcc: command not found
Compilation failed
25021aa
Sat, Mar 29, 2025  4:48:02 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
a08eed3
Sat, Mar 29, 2025  5:28:32 PM: 
 list.c | 76 ++++++++++++++++++++++++++++++++++++++----------------------------
 1 file changed, 44 insertions(+), 32 deletions(-)
./test.sh: line 26: gcc: command not found
Compilation failed
77ebb8f
Sat, Mar 29, 2025  5:42:40 PM: 
 list.c | 90 ++++++++++++++++++++++++------------------------------------------
 1 file changed, 33 insertions(+), 57 deletions(-)
./test.sh: line 26: gcc: command not found
Compilation failed
0f37e5c
Sat, Mar 29, 2025  5:43:11 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
fb4a511
Sat, Mar 29, 2025  5:44:07 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
e9594b9
Sat, Mar 29, 2025  6:16:23 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
8031b18
Sat, Mar 29, 2025  6:17:16 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
78d824f
Sat, Mar 29, 2025  6:17:34 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
d4e843e
Sat, Mar 29, 2025  6:31:40 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
6c38012
Sat, Mar 29, 2025  6:34:37 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
cae0152
Sat, Mar 29, 2025  6:35:04 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
593936e
Sat, Mar 29, 2025  6:38:51 PM: 
 tests:  12|0
total_score: 70/70
b6b0825
Sat, Mar 29, 2025  6:49:37 PM: 
 list.c | 117 ++++++++++++++---------------------------------------------------
 1 file changed, 25 insertions(+), 92 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:52:11: error: unused variable 'aux' [-Werror=unused-variable]
     Node *aux = NULL; // Variable extra sin uso real
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f18abd
Sat, Mar 29, 2025  6:50:36 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x537): undefined reference to `firstList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x5f6): undefined reference to `firstList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x640): undefined reference to `nextList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x6ff): undefined reference to `nextList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x754): undefined reference to `nextList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x7a8): undefined reference to `lastList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x86d): undefined reference to `prevList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x92c): undefined reference to `prevList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x981): undefined reference to `prevList'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0xc82): undefined reference to `pushCurrent'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0xd53): undefined reference to `pushCurrent'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0xe5e): undefined reference to `popCurrent'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0xf37): undefined reference to `popCurrent'
C:\Users\maxi\AppData\Local\Temp\cc6mwyOs.o:test.c:(.text+0x101e): undefined reference to `popCurrent'
collect2.exe: error: ld returned 1 exit status
Compilation failed
694ac7f
Sat, Mar 29, 2025  6:52:04 PM: 
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x537): undefined reference to `firstList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x5f6): undefined reference to `firstList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x640): undefined reference to `nextList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x6ff): undefined reference to `nextList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x754): undefined reference to `nextList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x7a8): undefined reference to `lastList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x86d): undefined reference to `prevList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x92c): undefined reference to `prevList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x981): undefined reference to `prevList'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0xc82): undefined reference to `pushCurrent'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0xd53): undefined reference to `pushCurrent'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0xe5e): undefined reference to `popCurrent'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0xf37): undefined reference to `popCurrent'
C:\Users\maxi\AppData\Local\Temp\cckvqLDI.o:test.c:(.text+0x101e): undefined reference to `popCurrent'
collect2.exe: error: ld returned 1 exit status
Compilation failed
699adf6
